--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-SUPABASE_URL=###
-SUPABASE_KEY=###
+PUBLIC_SUPABASE_URL=###
+PUBLIC_SUPABASE_ANON_KEY=###
 OPENROUTER_API_KEY=###
 PUBLIC_OPENROUTER_API_KEY=###
