--- a/.gitignore
+++ b/.gitignore
@@ -127,6 +127,7 @@ web_modules/
 # dotenv environment variable files
 .env
 .env.e2e
+.env.test
 .env.development.local
 .env.test.local
 .env.production.local
