--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@typescript-eslint/parser": "8.49.0",
     "@vitejs/plugin-react": "^5.1.2",
     "@vitest/ui": "^2.1.8",
+    "cross-env": "^10.1.0",
     "dotenv": "^17.2.3",
     "eslint": "9.23.0",
     "eslint-config-prettier": "10.1.1",
